Добавлена валютная история и код для генерации в БД

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,71 @@
 /Sources/Common.Web/bin
 /Sources/Common.Web/obj
 /Sources/Client.Web.Test/obj
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Scripts/Наполнение БД/ExchangeArchive/*.sql
+/Sources/Client.Web.Test/app.config
