--- a/Sources/Data.Test/Data.Test.csproj
+++ b/Sources/Data.Test/Data.Test.csproj
@@ -52,6 +52,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AutoCreateDbTest.cs" />
+    <Compile Include="Генерация БД\CurrencyTypeGenerator.cs" />
+    <Compile Include="Генерация БД\ExchangeArchiveGenerator.cs" />
+    <Compile Include="Генерация БД\GenerateScripts.cs" />
+    <Compile Include="Генерация БД\GeneratorHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
